# gravity2

./: .bazelrc  .clang-format  .clang-tidy  .clangd  .gitignore  BUILD.bazel  GenerateProject.bat  MODULE.bazel  premake5.lua
architecture/: GameLogicSequence.plantuml  GameLoopLogic.md  example.plantuml  example2.plantuml
bazel/: BUILD.bazel  api_build_system.bzl  cat_to_string_view.bat  cat_to_string_view.sh  gravity_build_system.bzl
premake/: dependencies.lua
shaders/: simple_shader.vert.spv
source/: BUILD.bazel
source/common/: BUILD.bazel  error.cpp  error.hpp  utilities.cpp  utilities.hpp
source/common/diagnostics/: BUILD.bazel  perfetto.cc  trace.cpp  trace.hpp
source/common/event/: BUILD.bazel  event_loop.hpp  event_loop_main.cpp
source/common/logging/: BUILD.bazel  config.cpp  config.hpp  logger.cpp  logger.hpp
source/common/scheduler/: BUILD.bazel  scheduler.cpp  scheduler.hpp
source/common/templates/: BUILD.bazel  bitmask.hpp
source/platform/: BUILD.bazel  glfw_context.hpp
source/platform/window/: BUILD.bazel  glfw_window_context.cpp  glfw_window_context.hpp  window_context.hpp
source/rendering/: BUILD.bazel  asset_manager.cpp  asset_manager.hpp  example_rendering_server.cpp  rendering_server.cpp  rendering_server.hpp  resource_manager.cpp  resource_manager.hpp
source/rendering/common/: BUILD.bazel  asset_types.hpp  rendering_api.hpp  rendering_type.hpp
source/rendering/contexts/vulkan/: BUILD.bazel  descriptor_allocator.cpp  descriptor_allocator.hpp  vulkan_context.cpp  vulkan_context.hpp
source/rendering/device/: BUILD.bazel  example_rendering_device.cpp  rendering_device.cpp  rendering_device.hpp
source/rendering/device/vulkan/: BUILD.bazel  vulkan_rendering_device.cpp  vulkan_rendering_device.hpp
source/rendering/drivers/: BUILD.bazel  rendering_driver.hpp
source/rendering/drivers/vulkan/: BUILD.bazel  rendering_api.hpp  vulkan_driver.cpp  vulkan_driver.hpp
source/rendering/resource/: BUILD.bazel  resource_manager.cpp
source/rendering/scene/: BUILD.bazel  scene_renderer.cpp  scene_renderer.hpp
source/rendering/servers/: BUILD.bazel  rendering_server.hpp
source/servers/rendering/: BUILD.bazel  example_rendering_server.cpp  rendering_server.cpp  rendering_server.hpp
source/servers/resource/: BUILD.bazel  resource_manager.cpp  resource_manager.hpp
