load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")

alias(
    name = "main",
    actual = "//source/rendering:example_rendering_server",
)

refresh_compile_commands(
    name = "refresh_compile_commands",
    targets = {
        "//source/rendering:example_rendering_server": "--compiler=clang-cl",
    },
)
