load("//bazel:gravity_build_system.bzl", "gravity_cc_library")

gravity_cc_library(
    name = "scheduler",
    srcs = ["scheduler.cpp"],
    hdrs = ["scheduler.hpp"],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//source/common:utilities",
        "//source/common/logging:logger",
        "@abseil-cpp//absl/strings",
        "@boost.asio",
        "@magic_enum",
    ],
)
