load("//bazel:gravity_build_system.bzl", "gravity_cc_binary", "gravity_cc_library")

gravity_cc_library(
    name = "rendering_device",
    hdrs = ["rendering_device.hpp"],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "@boost.asio",
    ],
)

gravity_cc_binary(
    name = "example_rendering_device",
    srcs = ["example_rendering_device.cpp"],
    data = [],
    visibility = ["//visibility:public"],
    deps = [
        ":rendering_device",
        "//source/common/logging:logger",
        "//source/platform/window:glfw_window_context",
        "//source/rendering/backends/vulkan:vulkan_backend",
        "//source/rendering/common:rendering_api",
        "//source/rendering/contexts/vulkan:vulkan_context",
    ],
)
