load("//bazel:gravity_build_system.bzl", "gravity_cc_binary", "gravity_cc_library")

gravity_cc_library(
    name = "rendering_server",
    srcs = ["rendering_server.cpp"],
    hdrs = ["rendering_server.hpp"],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//source/common/scheduler",
        "//source/rendering/common:rendering_api",
        "//source/rendering/device:rendering_device",
        "@boost.asio",
    ],
)

gravity_cc_binary(
    name = "example_rendering_server",
    srcs = ["example_rendering_server.cpp"],
    data = [],
    visibility = ["//visibility:public"],
    deps = [
        ":rendering_server",
        "//source/common/logging:logger",
        "//source/platform/window:glfw_window_context",
        "//source/rendering/device:rendering_device",
        "//source/rendering/device/vulkan:vulkan_rendering_device",
    ],
)
