load("//bazel:gravity_build_system.bzl", "gravity_cc_library")

gravity_cc_library(
    name = "resource_manager",
    srcs = ["resource_manager.cpp"],
    hdrs = ["resource_manager.hpp"],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//source/common/scheduler",
        "//source/rendering/common:rendering_api",
        "@boost.asio",
        "@boost.scope_exit",
        "@gsl",
    ],
)
