load("//bazel:gravity_build_system.bzl", "gravity_cc_library")

gravity_cc_library(
    name = "vulkan_driver",
    srcs = ["vulkan_driver.cpp"],
    hdrs = ["vulkan_driver.hpp"],
    visibility = [
        "//visibility:public",
        #"//source/rendering/drivers:__pkg__"
    ],
    deps = [
        # ":config",
        # "//source/common:assert",
        # "//source/common:compiler",
        # "//source/common/templates:simple_allocator",
        # "//source/rendering/context/vulkan:vulkan_context_interface",
        "//source/rendering/drivers:rendering_driver",
        "//source/rendering/contexts/vulkan:vulkan_context",
        # "//source/rendering/shaders/spirv:compiler",
        # "@glfw",
        # "@glm",
        # "@magic_enum",
        # "@spdlog",
        # "@spirv-reflect",
        "//source/common/scheduler",
        "@boost.asio",
        "@vulkan_windows//:vulkan_cc_library",
    ],
)
